--- a/Responsive-Restaurant-Website-main/index-qr.html
+++ b/Responsive-Restaurant-Website-main/index-qr.html
@@ -70,10 +70,10 @@
   <div class="menu-container">
     <h2>Scan to View Menu</h2>
     <div class="qr-code">
-      <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://yourmenu.com" alt="QR Code">
+      <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://github.com/Ezhilan-A-N/Restaurant-menu/" alt="QR Code">
     </div>
     <p>Point your camera to the code or click the button below.</p>
-    <a class="button" href="https://yourmenu.com" target="_blank">View Menu</a>
+    <a class="button" href="/Responsive-Restaurant-Website-main/index.html" target="_blank">View Menu</a>
   </div>
 
 </body>
